Update duplicate user validation and update the category api